fix(pages/index): fix horizontal scrollbar on desktop

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -54,6 +54,76 @@
   max-height: 100%;
 }
 
+.gutter {
+  width: 100 vw;
+  display: grid;
+  grid-template-columns: 1fr 6fr 1fr;
+  grid-template-rows: min-content min-content min-content;
+  grid-template-areas:
+    ' . events   . '
+    ' . partners . '
+    ' . contact  . ';
+  padding: 6% 0% 3%;
+}
+
+@media all and (min-width: 839px) {
+  .gutter {
+    grid-template-columns: 9.58% 80.84% 9.58%;
+    grid-template-rows: min-content min-content min-content;
+    grid-template-areas:
+      '. events   .'
+      '. partners .'
+      '. contact  .';
+  }
+}
+
+.events {
+  grid-area: events;
+}
+
+.partners {
+  grid-area: partners;
+}
+
+.contact {
+  grid-area: contact;
+}
+
+.partnerImages {
+  width: 80vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 5vh;
+  grid-template-areas: 'oldSlo brandmakers';
+  padding: 0% 0% 3%;
+}
+
+@media all and (min-width: 839px) {
+  .partnerImages {
+    grid-template-columns: 15% 15%;
+    grid-template-rows: 5vh;
+    grid-template-areas: 'oldSlo brandmakers';
+  }
+}
+
+.oldLink {
+  grid-area: oldSlo;
+}
+
+.oldSlo {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.brandLink {
+  grid-area: brandmakers;
+}
+
+.brandmakers {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .h1 {
   display: none;
 }
